Add two textfiels for first name and last name, remove the text box for name

--- a/src/main/webapp/client/simpleclient.html
+++ b/src/main/webapp/client/simpleclient.html
@@ -18,8 +18,10 @@ and open the template in the editor.
         
         ID:<br>
         <input type="text" id="id_field"><br>
-        Name:<br>
-        <input type="text" id="name_field"><br>
+        First Name:<br>
+        <input type="text" id="firstname_field"><br>
+        Last Name:<br>
+        <input type="text" id="lastname_field"><br>
 
         <button onclick="getData()">GET</button>
         <button onclick="postData()">POST</button>
